Removed uneeded text validation that made the app less responsive. Added a way to navigate to the all project page. Fixed navbar header alignment issue

--- a/src/views/molecules/top-nav/top-nav.scss
+++ b/src/views/molecules/top-nav/top-nav.scss
@@ -2,7 +2,7 @@
 
 .top-nav {
   position: relative;
-  padding: 24px 24px 10px 24px;
+  padding: 14px 24px 14px 24px;
   width: inherit;
   background-color: #67439B;
   -webkit-border-radius: 16px;
