--- a/src/views/pages/me/me.scss
+++ b/src/views/pages/me/me.scss
@@ -8,7 +8,7 @@
   transition: all 0.2s;
   margin: 2em auto;
   max-width: 600px;
-  padding: 2em;
+  padding: 2em 2em 4em 2em;
   background: white;
   -webkit-border-radius: 16px;
   -moz-border-radius: 16px;
@@ -152,6 +152,7 @@
   .me {
     margin: 0 auto;
     background: none;
+    padding-bottom: 4em;
     .avatar-wrapper {
       max-width: 90px;
       max-height: 90px;
